fix booking history